In the odf extractor, check for hasError separately to EndDocument. This fixes the case where the file ends prematurely, which would previously loop forever.

BUG: 324885
FIXED-IN:4.11.2